k8s/uat/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: equity-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: equity-frontend
  template:
    metadata:
      labels:
        app: equity-frontend
    spec:
      containers:
        - name: frontend
          image: 248729599698.dkr.ecr.us-west-1.amazonaws.com/react-fund-dev:frontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: equity-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
